Converted gl_screen code to a virtual video DAC
Note that it doesn't really do the same thing as the real N64 video DAC.
It serves more as an analogy for the part that sits between the RDP
and the TV, which is better than a crude OpenGL extension of the
screen interface.

--- a/msvc/core.vcxproj.filters
+++ b/msvc/core.vcxproj.filters
@@ -29,13 +29,7 @@
     <ClCompile Include="..\src\core\plugin.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\core\screen.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="..\src\core\n64video.c">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="..\src\core\gl_screen.c">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\src\core\gl_core_3_3\gl_core_3_3.c">
@@ -98,6 +92,9 @@
     <ClCompile Include="..\src\core\n64video\vi\video.c">
       <Filter>Source Files\n64video\vi</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\core\vdac.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\core\common.h">
@@ -121,11 +118,11 @@
     <ClInclude Include="..\src\core\rdp.h">
       <Filter>Source Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\core\gl_screen.h">
-      <Filter>Source Files</Filter>
-    </ClInclude>
     <ClInclude Include="..\src\core\gl_core_3_3\gl_core_3_3.h">
       <Filter>Source Files\gl_core_3_3</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\core\vdac.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
